--- a/templates/portal/home2.html
+++ b/templates/portal/home2.html
@@ -3,7 +3,7 @@
 {% block content %}
     <section class="content">
 
-        <marquee class="text-success" scrollamount="5">Version 2.0 | Now you can directly update namaz times. Please update times very carefully!</marquee>
+        <marquee class="text-warning font-weight-normal" scrollamount="3">This website was not upto-date since March 2020 due to Covid-19 lockdown, hence you may find old timings for some masajid. If you know the original timings of any masjid then please give your support and update times here. Thank you!</marquee>
 
         {% if messages %}
             {% for message in messages %}
